--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section class="contact" id="contact">
             <div class="container">
                 <h2>Get in Touch</h2>
-               <form action="https://formsubmit.co/el/yinozi/mrswyrdo@gmail.com="POST">
+               <form action="https://formsubmit.co/https:/yinozi/20e590cd5d6de1740346e4cf9ac90c50"POST">
                     <div>
                         <label for="name">Name</label>
                         <input type="text" id="name" placeholder="Enter your name" required />
